# daytrader-bot

./: .env.example  .gitignore  README.md  backtest.py  main.py  pyproject.toml  requirements.txt
config/: backtest_universe.yaml  config.yaml
data/: trading.db-shm  trading.db-wal
data/backtest/: labels.parquet  labels_gap.parquet  labels_gap_dir_core10.parquet  labels_gap_dir_core10_oos.parquet  labels_orb_gap.parquet  labels_orb_gap_enforce.parquet  labels_orb_gap_no_crypto.parquet  labels_orb_gap_v2.parquet  labels_train_2021_2025.parquet  labels_train_2021_2025_oos.parquet
data/backtest_cache/: AAPL_1d.parquet  AAPL_5m.parquet  AMAT_1d.parquet  AMAT_5m.parquet  AMD_1d.parquet  AMD_5m.parquet  AMZN_1d.parquet  AMZN_5m.parquet  APP_1d.parquet  APP_5m.parquet  ARM_1d.parquet  (+50 more)
deploy/: LINUX.md  crontab.example  daytrader.service  install-linux-systemd.sh  install-windows-task.ps1  start-daytrader.ps1
docs/: EMAIL_SETUP_GMAIL.md  action_plan.txt  sim_validation.md
scripts/: check_alpaca_feed.py  check_db.py  run_meta_research_pipeline.py  sim_gate_status.py  sweep_orb_rvol.py  sweep_screener_rvol.py  train_meta_model.py
tests/: conftest.py  test_backtest_engine.py  test_data_engine.py  test_execution_engine.py  test_gap_features.py  test_indicators.py  test_meta_filter.py  test_persistence.py  test_pf_gate.py  test_regime.py  test_reporting.py  test_research_engine.py  test_risk_manager.py  test_router.py  test_screener.py  test_screener_parity.py  test_sentiment.py  test_session_hygiene.py  test_strategies.py  test_virtual_broker.py  test_vol_gate.py
(+63 files in other folders)
